deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prueba-js
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prueba-js
  template:
    metadata:
      labels:
        app: prueba-js
    spec:
      # imagePullSecrets: 
      # - name: github-regcred  
      containers:
      - name: prueba-js
        image: ghcr.io/caixa-bank/prueba-js:v1.0.2w
        ports:
        - containerPort: 5000
