deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prueba-js
spec:
  type: NodePort
  selector:
    app: prueba-js
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
